--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,97 @@
     transform: rotate(360deg);
   }
 }
+
+/* Dashed button */
+.dashed-button-indigo {
+  @apply border-gray-300 border-dashed border-2 h-14 rounded-full w-20 ring-black;
+}
+
+.dashed-button-indigo:hover {
+  @apply hover:border-gray-400; 
+}
+
+.dashed-button-indigo:focus{
+  @apply focus:ring-offset-2 focus:ring-2 focus:border-indigo-500 focus:ring-indigo-500;
+}
+
+/* dashed input indigo */
+.dashed-input-indigo{
+  @apply shadow-sm inline-block w-full h-14 border-2 border-gray-300 border-dashed sm:text-sm px-4 rounded-xl;
+}
+
+.dashed-input-indigo:hover{
+  @apply hover:border-gray-400 ;
+}
+
+.dashed-input-indigo:focus{
+  @apply focus:ring-indigo-500 focus:border-indigo-500 focus:outline-none focus:ring-2 focus:ring-offset-2;
+}
+
+/* dashed textarea indigo  */
+.dashed-textarea-indigo{
+  @apply shadow-sm inline-block w-full h-36 border-2 border-gray-300 border-dashed sm:text-sm px-4 rounded-xl;
+}
+
+.dashed-textarea-indigo:hover{
+  @apply hover:border-gray-400 ;
+}
+
+.dashed-textarea-indigo:focus{
+  @apply focus:ring-indigo-500 focus:border-indigo-500 focus:outline-none focus:ring-2 focus:ring-offset-2;
+}
+
+/* for hiding scrollbar */
+.hideScroll::-webkit-scrollbar {
+  width: 1em;
+}
+
+.Resizer {
+  background: #000;
+  opacity: 0.2;
+  z-index: 1;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  -moz-background-clip: padding;
+  -webkit-background-clip: padding;
+  background-clip: padding-box;
+}
+ 
+.Resizer:hover {
+  -webkit-transition: all 2s ease;
+  transition: all 2s ease;
+}
+ 
+.Resizer.horizontal {
+  height: 11px;
+  margin: -5px 0;
+  border-top: 5px solid rgba(255, 255, 255, 0);
+  border-bottom: 5px solid rgba(255, 255, 255, 0);
+  cursor: row-resize;
+  width: 100%;
+}
+ 
+.Resizer.horizontal:hover {
+  border-top: 5px solid rgba(0, 0, 0, 0.5);
+  border-bottom: 5px solid rgba(0, 0, 0, 0.5);
+}
+ 
+.Resizer.vertical {
+  width: 11px;
+  margin: 0 -5px;
+  border-left: 5px solid rgba(255, 255, 255, 0);
+  border-right: 5px solid rgba(255, 255, 255, 0);
+  cursor: col-resize;
+}
+ 
+.Resizer.vertical:hover {
+  border-left: 5px solid rgba(0, 0, 0, 0.5);
+  border-right: 5px solid rgba(0, 0, 0, 0.5);
+}
+.Resizer.disabled {
+  cursor: not-allowed;
+}
+.Resizer.disabled:hover {
+  border-color: transparent;
+}
