--- a/src/App.css
+++ b/src/App.css
@@ -231,30 +231,30 @@
   @apply focus:ring-offset-2 focus:ring-2 focus:border-indigo-500 focus:ring-indigo-500;
 }
 
-/* dashed input indigo */
-.dashed-input-indigo{
-  @apply shadow-sm inline-block w-full h-11 border-2 border-gray-400 border-dashed sm:text-sm px-4 rounded-xl;
+/* dashed input black */
+.dashed-input-black{
+  @apply shadow-sm inline-block w-full h-11 border-2 border-gray-400 border-dashed sm:text-sm px-4;
 }
 
-.dashed-input-indigo:hover{
+.dashed-input-black:hover{
   @apply hover:border-gray-800 ;
 }
 
-.dashed-input-indigo:focus{
-  @apply focus:ring-indigo-500 focus:border-indigo-500 focus:outline-none focus:ring-2 focus:ring-offset-2;
+.dashed-input-black:focus{
+  @apply focus:ring-black focus:border-black focus:outline-none focus:border-solid focus:ring-offset-2;
 }
 
 /* dashed textarea indigo  */
-.dashed-textarea-indigo{
-  @apply shadow-sm inline-block w-full h-36 p-5 border-2 border-gray-400 border-dashed sm:text-sm px-4 rounded-xl;
+.dashed-textarea-black{
+  @apply shadow-sm inline-block w-full h-36 p-5 border-2 border-gray-400 border-dashed sm:text-sm px-4;
 }
 
-.dashed-textarea-indigo:hover{
+.dashed-textarea-black:hover{
   @apply hover:border-gray-800 ;
 }
 
-.dashed-textarea-indigo:focus{
-  @apply focus:ring-indigo-500 focus:border-indigo-500 focus:outline-none focus:ring-2 focus:ring-offset-2;
+.dashed-textarea-black:focus{
+  @apply focus:border-black focus:outline-none focus:border-solid;
 }
 
 /* for hiding scrollbar */
