--- a/src/App.css
+++ b/src/App.css
@@ -59,6 +59,19 @@
   @apply focus:ring-offset-2 focus:ring-2 focus:border-red-700 focus:ring-red-700 text-red-700 ;
 }
 
+/* small red button */
+.dashed-small-button-red {
+  @apply px-3 h-8 font-semibold text-gray-400 border-gray-400 border-dashed border-2  w-full ring-black;
+}
+
+.dashed-small-button-red:hover {
+  @apply hover:border-red-700 text-red-700 ; 
+}
+
+.dashed-small-button-red:focus{
+  @apply focus:ring-offset-2 focus:ring-2 focus:border-red-700 focus:ring-red-700 text-red-700 ;
+}
+
 /* dashed-rounded-microphone-button */
 .dashed-microphone-button{
   @apply font-semibold text-gray-400 border-gray-400 border-dashed border-2 h-11 rounded-full w-full ring-black;
@@ -70,6 +83,105 @@
 
 .pulse-animate {
   animation: pulse 1.2s infinite;
+}
+
+/* Dashed big button */
+.dashed-big-button-indigo {
+  @apply border-gray-400 text-lg font-semibold p-3 border-dashed border-2 h-14 rounded-full ring-black;
+}
+
+.dashed-big-button-indigo:hover {
+  @apply hover:border-indigo-500 hover:ring-indigo-500 hover:ring-offset-2 hover:ring-2;
+}
+
+.dashed-big-button-indigo:focus{
+  @apply focus:ring-offset-2 focus:ring-2 focus:border-indigo-500 focus:ring-indigo-500;
+}
+
+/* dashed input black */
+.dashed-input-black{
+  @apply shadow-sm inline-block w-full h-9 border-2 border-gray-400 border-dashed sm:text-sm px-4;
+}
+
+.dashed-input-black:hover{
+  @apply hover:border-gray-800 ;
+}
+
+.dashed-input-black:focus{
+  @apply focus:ring-black focus:border-black focus:outline-none focus:border-solid focus:ring-offset-2;
+}
+
+/* dashed textarea indigo  */
+.dashed-textarea-black{
+  @apply shadow-sm inline-block w-full h-36 p-5 border-2 border-gray-400 border-dashed sm:text-sm px-4;
+}
+
+.dashed-textarea-black:hover{
+  @apply hover:border-gray-800 ;
+}
+
+.dashed-textarea-black:focus{
+  @apply focus:border-black focus:outline-none focus:border-solid;
+}
+
+/* dropdown */
+.dropdown-animate{
+  transition: width 2s, height 4s;
+}
+
+/* for hiding scrollbar */
+.hideScroll::-webkit-scrollbar {
+  width: 1em;
+}
+
+.Resizer {
+  background: #000;
+  opacity: 0.2;
+  z-index: 1;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  -moz-background-clip: padding;
+  -webkit-background-clip: padding;
+  background-clip: padding-box;
+}
+ 
+.Resizer:hover {
+  -webkit-transition: all 2s ease;
+  transition: all 2s ease;
+}
+ 
+.Resizer.horizontal {
+  height: 11px;
+  margin: -5px 0;
+  border-top: 5px solid rgba(255, 255, 255, 0);
+  border-bottom: 5px solid rgba(255, 255, 255, 0);
+  cursor: row-resize;
+  width: 100%;
+}
+ 
+.Resizer.horizontal:hover {
+  border-top: 5px solid rgba(0, 0, 0, 0.5);
+  border-bottom: 5px solid rgba(0, 0, 0, 0.5);
+}
+ 
+.Resizer.vertical {
+  width: 11px;
+  margin: 0 -5px;
+  border-left: 5px solid rgba(255, 255, 255, 0);
+  border-right: 5px solid rgba(255, 255, 255, 0);
+  cursor: col-resize;
+}
+ 
+.Resizer.vertical:hover {
+  border-left: 5px solid rgba(0, 0, 0, 0.5);
+  border-right: 5px solid rgba(0, 0, 0, 0.5);
+}
+.Resizer.disabled {
+  cursor: not-allowed;
+}
+.Resizer.disabled:hover {
+  border-color: transparent;
 }
 
 @keyframes pulse {
@@ -215,104 +327,4 @@
     --tw-text-opacity: 1;
     color: rgb(185 28 28 / var(--tw-text-opacity));
   }
-}
-
-
-/* Dashed big button */
-.dashed-big-button-indigo {
-  @apply border-gray-400 text-lg font-semibold p-3 border-dashed border-2 h-14 rounded-full ring-black;
-}
-
-.dashed-big-button-indigo:hover {
-  @apply hover:border-indigo-500 hover:ring-indigo-500 hover:ring-offset-2 hover:ring-2;
-}
-
-.dashed-big-button-indigo:focus{
-  @apply focus:ring-offset-2 focus:ring-2 focus:border-indigo-500 focus:ring-indigo-500;
-}
-
-/* dashed input black */
-.dashed-input-black{
-  @apply shadow-sm inline-block w-full h-9 border-2 border-gray-400 border-dashed sm:text-sm px-4;
-}
-
-.dashed-input-black:hover{
-  @apply hover:border-gray-800 ;
-}
-
-.dashed-input-black:focus{
-  @apply focus:ring-black focus:border-black focus:outline-none focus:border-solid focus:ring-offset-2;
-}
-
-/* dashed textarea indigo  */
-.dashed-textarea-black{
-  @apply shadow-sm inline-block w-full h-36 p-5 border-2 border-gray-400 border-dashed sm:text-sm px-4;
-}
-
-.dashed-textarea-black:hover{
-  @apply hover:border-gray-800 ;
-}
-
-.dashed-textarea-black:focus{
-  @apply focus:border-black focus:outline-none focus:border-solid;
-}
-
-/* dropdown */
-.dropdown-animate{
-  transition: width 2s, height 4s;
-}
-
-/* for hiding scrollbar */
-.hideScroll::-webkit-scrollbar {
-  width: 1em;
-}
-
-.Resizer {
-  background: #000;
-  opacity: 0.2;
-  z-index: 1;
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  -moz-background-clip: padding;
-  -webkit-background-clip: padding;
-  background-clip: padding-box;
-}
- 
-.Resizer:hover {
-  -webkit-transition: all 2s ease;
-  transition: all 2s ease;
-}
- 
-.Resizer.horizontal {
-  height: 11px;
-  margin: -5px 0;
-  border-top: 5px solid rgba(255, 255, 255, 0);
-  border-bottom: 5px solid rgba(255, 255, 255, 0);
-  cursor: row-resize;
-  width: 100%;
-}
- 
-.Resizer.horizontal:hover {
-  border-top: 5px solid rgba(0, 0, 0, 0.5);
-  border-bottom: 5px solid rgba(0, 0, 0, 0.5);
-}
- 
-.Resizer.vertical {
-  width: 11px;
-  margin: 0 -5px;
-  border-left: 5px solid rgba(255, 255, 255, 0);
-  border-right: 5px solid rgba(255, 255, 255, 0);
-  cursor: col-resize;
-}
- 
-.Resizer.vertical:hover {
-  border-left: 5px solid rgba(0, 0, 0, 0.5);
-  border-right: 5px solid rgba(0, 0, 0, 0.5);
-}
-.Resizer.disabled {
-  cursor: not-allowed;
-}
-.Resizer.disabled:hover {
-  border-color: transparent;
 }
